# machine-learning-api

./: .gitignore  Makefile  README.md  pyproject.toml
ml_api/: api.py  config.py  data_to_db.py  database.py  get_random_json_data.py  model.py
test/: test_api.py
