[tool.poetry]
name = "ml_api"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9"
psycopg2-binary = "^2.8.6"
Flask = "^1.1.2"
pandas = "^1.2.2"
sklearn = "^0.0"
SQLAlchemy = "^1.3.23"
joblib = "^1.0.1"
scikit-learn = "^0.24.1"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"